Updated style of hero text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="header-content-inner">
           <h1 id="homeHeading">Find Your Adventure</h1>
           <hr>
-          <p>Gear Up is an on-demand gear rental service</p>
+          <h2>Gear Up is an on-demand gear rental service</h2>
           <a class="btn btn-primary btn-xl btn-vert-block js-scroll-trigger" href="#about">Find Out More</a>
           <a class="btn btn-secondary btn-xl btn-vert-block js-scroll-trigger" href="file:///Users/jaymaglione/Desktop/Misc/Gear/Websites/gearup_gallery_v1.html">
             Gear Available</a>
